sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: '<-' expected but '=' found.
			for(j= 0 to i){
                             ^AlgBubbleSort2:15: error: illegal start of simple expression
		}
                ^